dev merged intro timeslots- big fail